<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scissors" />

        <TextView
            android:id="@+id/rulesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_weapon" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rockSelected"
            android:text="@string/rock" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="paperSelected"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scissorsSelected"
            android:text="@string/scissors" />

        <TextView
            android:id="@+id/scoresText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_0_computer_0" />

        <TextView
            android:id="@+id/playerWeaponText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_chooses" />

        <TextView
            android:id="@+id/computerWeaponText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_chooses" />

        <TextView
            android:id="@+id/whoWonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_not_chosen_an_option_yet" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>